# t-koma

./: .env.example  .gitignore  .ralphrc  AGENTS.md  Cargo.toml  FORMATTING.md  README.md  dprint.json  justfile
t-koma-cli/: Cargo.toml
t-koma-cli/src/: admin.rs  app.rs  cli_app.rs  cli_events.rs  cli_ws.rs  client.rs  gateway_spawner.rs  log_follower.rs  main.rs  model_config.rs  provider_selection.rs  ui.rs
t-koma-cli/src/tui/: app.rs  layout.rs  mod.rs  state.rs  theme.rs
t-koma-cli/src/tui/app/: actions.rs  input.rs  (+6 more)
t-koma-core/: Cargo.toml
t-koma-core/src/: config.rs  cron.rs  default_skills.rs  lib.rs  message.rs  pending_users.rs  persistent_config.rs  skill_registry.rs  skills.rs
t-koma-core/src/config/: knowledge.rs  mod.rs  secrets.rs  settings.rs
t-koma-db/: Cargo.toml  ghost_schema.sql  schema.sql
t-koma-db/migrations/: 20250202000000_initial_schema.sql  20250202000001_sessions_and_messages.sql  20260210000000_unified_schema.sql  20260210100000_job_log_v3.sql  20260212000000_ghost_model_aliases.sql  20260213000000_ghost_statusline.sql  20260214000000_cron_jobs.sql
t-koma-db/migrations/ghost/: 20260203000000_ghost_schema.sql  20260208000000_job_logs.sql  20260209000000_usage_log.sql  20260209000001_prompt_cache.sql  20260209000002_compaction.sql
t-koma-db/migrations/koma/: 20260203000000_koma_schema.sql  20260203000001_add_ghost_cwd.sql  20260206000000_operator_access_levels.sql  20260206000001_operator_workspace_escape.sql
t-koma-db/src/: db.rs  error.rs  ghost_db.rs  ghosts.rs  interfaces.rs  job_logs.rs  koma_db.rs  lib.rs  operators.rs  prompt_cache.rs  sessions.rs  sqlite_runtime.rs  test_helpers.rs  usage_log.rs  users.rs
t-koma-db/tests/: ghost_repository_integration.rs
t-koma-gateway/: Cargo.toml  build.rs
t-koma-gateway/messages/en/: approvals.toml  discord.toml  generic.toml  ghosts.toml  models.toml  server.toml
t-koma-gateway/prompts/: bootstrap.md  coding-guidelines.md  ghost-context.md  note-guidelines.md  reflection-prompt.md  system-base.md  system-prompt.md  tool-guidelines.md  tool-use.md
t-koma-gateway/src/: anthropic.rs  circuit_breaker.rs  cron.rs  deterministic_messages.rs  discord.rs  gateway_message.rs  heartbeat.rs  lib.rs  log_bridge.rs  main.rs  model_registry.rs  operator_flow.rs  reflection.rs  scheduler.rs  server.rs  session.rs  state.rs  system_info.rs
t-koma-gateway/src/chat/: compaction.rs  history.rs  mod.rs  prompt_cache.rs  token_budget.rs
t-koma-gateway/src/content/: ids.rs  message.rs  mod.rs  prompt.rs  registry.rs  template.rs
t-koma-gateway/src/discord/: bot.rs  components_v2.rs  interactions.rs  markdown.rs  mod.rs  send.rs  table_image.rs
t-koma-gateway/src/models/: anthropic.rs  mod.rs  prompt.rs  provider.rs
t-koma-gateway/src/prompt/: base.rs  block.rs  context.rs  mod.rs  render.rs
t-koma-gateway/src/providers/: mod.rs  provider.rs  query_dump.rs
t-koma-gateway/src/tools/: change_directory.rs  context.rs  create_file.rs  diary_write.rs  file_edit.rs  find_files.rs  identity_edit.rs  knowledge_get.rs  knowledge_search.rs  list_dir.rs  load_skill.rs  manager.rs  memory_capture.rs  memory_get.rs  memory_note_comment.rs  memory_note_create.rs  memory_note_update.rs  memory_note_validate.rs  memory_search.rs  mod.rs  note_write.rs  read_file.rs  reference_file_update.rs  reference_get.rs  reference_import.rs  reference_manage.rs  reference_save.rs  reference_search.rs  reference_topic_create.rs  reference_topic_list.rs  reference_topic_search.rs  reference_topic_update.rs  reference_write.rs  reflection_todo.rs  search.rs  search_diary.rs  shell.rs  web_fetch.rs  web_search.rs
t-koma-gateway/src/web/: cache.rs  mod.rs
t-koma-gateway/tests/: anthropic_live.rs  cron_live.rs  gemini_live.rs  kimi_code_live.rs  llama_cpp_live.rs  multi_model_live.rs  openai_compatible_live.rs  openrouter_live.rs  snapshot_tests.rs  web_tools_live.rs
t-koma-gateway/tests/client/: basic_queries.rs  mod.rs  tool_use.rs
t-koma-gateway/tests/common/: mod.rs
t-koma-gateway/tests/conversation/: file_operations.rs  mod.rs  multi_turn.rs  new_tools_workflow.rs  skill_usage.rs
t-koma-gateway/tests/snapshots/: snapshot_tests__factual_query.snap  snapshot_tests__list_response.snap  snapshot_tests__simple_greeting.snap  snapshot_tests__tool_use_file_edit.snap  snapshot_tests__tool_use_shell.snap
t-koma-knowledge/: Cargo.toml
t-koma-knowledge/knowledge/prompts/: knowledge_system.md  reference_system.md
t-koma-knowledge/migrations/knowledge/: 0001_init.sql  0002_add_archetype.sql  0002_reference_files_metadata.sql
t-koma-knowledge/src/: chunker.rs  config.rs  crawl.rs  embeddings.rs  errors.rs  graph.rs  index.rs  ingest.rs  lib.rs  models.rs  parser.rs  paths.rs  search.rs  sources.rs  storage.rs  watcher.rs
t-koma-knowledge/src/engine/: get.rs  mod.rs  notes.rs  reference.rs  save.rs  search.rs  topics.rs
t-koma-knowledge/tests/: codebase_embedding.rs  crawl_e2e.rs  cross_scope_links.rs  embedding_live.rs  private_isolation.rs  reference_topic_e2e.rs  tool_integration.rs
t-koma-knowledge/tests/snapshots/: codebase_embedding__hybrid_search_finds_search_pipeline.snap  codebase_embedding__hybrid_search_finds_search_pipeline.snap.new  codebase_embedding__knowledge_graph_link_resolution.snap  codebase_embedding__knowledge_graph_link_resolution.snap.new  codebase_embedding__scope_isolation_ghost_vs_reference.snap  codebase_embedding__scope_isolation_ghost_vs_reference.snap.new  codebase_embedding__toml_front_matter_parsing.snap  codebase_embedding__toml_front_matter_parsing.snap.new  codebase_embedding__tree_sitter_code_chunking.snap  codebase_embedding__tree_sitter_code_chunking.snap.new  crawl_e2e__openrouter_crawl_indexing.snap  crawl_e2e__openrouter_crawl_topic_list.snap  crawl_e2e__openrouter_search_api_auth.snap  crawl_e2e__openrouter_search_model_routing.snap  reference_topic_e2e__dioxus_approval_summary.snap  reference_topic_e2e__dioxus_per_file_indexing.snap  reference_topic_e2e__dioxus_reference_search_component_lifecycle.snap  reference_topic_e2e__dioxus_reference_search_rsx_syntax.snap  (+3 more)
(+164 files in other folders)
