[workspace]
members = [
  "t-koma-cli",
  "t-koma-core",
  "t-koma-db",
  "t-koma-gateway",
  "t-koma-knowledge",
  "t-koma-oauth",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["t-koma contributors"]
edition = "2024"
license = "None"
repository = "https://github.com/tolki/t-koma"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Internal crates
t-koma-core = { path = "t-koma-core" }
