[package]
name = "t-koma-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "t-koma-cli"
path = "src/main.rs"

[dependencies]
t-koma-core.workspace = true
t-koma-db = { path = "../t-koma-db" }
t-koma-oauth = { path = "../t-koma-oauth" }

# Async runtime
tokio.workspace = true

# TUI
crossterm = "0.28"
ratatui = "0.29"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# Futures
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

# URL parsing
url = "2.5"

# UUID generation
uuid = { version = "1.12", features = ["v4"] }

# Async stream
async-stream = "0.3"

# HTTP client for health checks (used for auto-spawning gateway)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Time
chrono = { workspace = true }
tempfile = "3"

# Browser opener (OAuth flows)
open = "5"
