[package]
name = "t-koma-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
dotenvy.workspace = true

# Configuration handling
dirs = "6.0"
yaml-rust2 = "0.11"
toml = { version = "0.9", features = ["preserve_order"] }

# Utilities
rand = "0.9"
hex = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
walkdir = "2.5"
