[package]
name = "t-koma-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Configuration handling
dirs = "6.0"
toml = { version = "0.9", features = ["preserve_order"] }
yaml-rust2 = "0.11"

# Utilities
hex = "0.4"
rand = "0.9"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
walkdir = "2.5"
