[package]
name = "t-koma-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
sqlite-vec = "0.1"
rusqlite = "0.32"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Regex
regex = "1"

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Zero-copy vector operations
zerocopy = "0.8"

# Directories
dirs = "5.0"

# Tracing
tracing = { workspace = true }

# UUIDs
uuid = { version = "1.12", features = ["v4"] }

[features]
default = []
test-helpers = []

[dev-dependencies]
tempfile = "3.0"
