[package]
name = "t-koma-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "t_koma_gateway"
path = "src/lib.rs"

[[bin]]
name = "t-koma-gateway"
path = "src/main.rs"

[dependencies]
t-koma-core.workspace = true
t-koma-db = { path = "../t-koma-db" }
t-koma-knowledge = { path = "../t-koma-knowledge" }

# Async runtime
tokio.workspace = true

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

# Embedded content
include_dir = "0.7"

# Utilities
futures = "0.3"
uuid = { version = "1.12", features = ["v4"] }
os_info = "3"

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
async-trait = "0.1.89"

# Search functionality (ripgrep core)
grep = "0.3"
grep-regex = "0.1"

# File finding (fd-find uses this)
ignore = "0.4"

# Regex for glob matching
regex = "1"
globset = "0.4"

# HTML to text conversion
html2text = "0.12"

# Article content extraction (Mozilla Readability port)
readability = "0.3"
url = "2"

# Database (re-export pool types)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# SVG → PNG table rendering for Discord
resvg = "0.46"

[dev-dependencies]
# For snapshot testing
insta = { version = "1.42", features = ["json", "redactions"] }
serde_json = { workspace = true }
tempfile = "3.24.0"

# For integration test database setup - enable test-helpers feature
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
t-koma-db = { path = "../t-koma-db", features = ["test-helpers"] }
walkdir = "2"

[build-dependencies]
serde = { workspace = true }
toml = "0.8"

[[example]]
name = "e2e_knowledge_test"
path = "../scripts/e2e_knowledge_test.rs"

[features]
default = []
live-tests = []
