[package]
name = "t-koma-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
sqlite-vec = "0.1"
libsqlite3-sys = "0.28"
uuid = { version = "1.7", features = ["v4", "serde"] }
toml = "0.8"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
notify = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
pulldown-cmark = "0.12"
dirs = "5.0"
t-koma-core.workspace = true

[dev-dependencies]
tempfile = "3.0"
