[package]
name = "t-koma-knowledge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

dirs = "5.0"
hex = "0.4"
html2text = "0.12"
libsqlite3-sys = "0.28"
notify = "6.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
sha2 = "0.10"
sqlite-vec = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
t-koma-core.workspace = true
tempfile = "3.0"
toml = "0.8"
tree-sitter = "0.22"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
walkdir = "2.5"

[features]
slow-tests = []
live-tests = []

[dev-dependencies]
insta = { version = "1.39", features = ["yaml"] }
tempfile = "3.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
